Fix header z-index

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -23,6 +23,7 @@ body
   top: 0
   left: 0
   right: 0
+  z-index: 100
   background-color: $white
 
   &__container
